--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../img/216A9855.jpg" class="d-block w-100" alt="...">
+          <img src="./img/216A9855.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption ">
             <h5>Первое заседание Молодежного парламента</h5>
             <div class="d-none d-md-block">
