--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <div class="MYcard">
       <a href="https://vk.com/feed"><img src="./img/prueba2_19.jpg" class="card-img-top h-100" alt="..."></a>
       <div class="MYtext">
-        <h3>Инициативы</h3>
+        <h3>Проекты</h3>
         Проекты молодёжного парламента Красноярского края
       </div>
     </div>
