--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./img/216A9855.jpg" class="d-block w-100" alt="...">
+          <img src="./img/216A9855.jpg" class="d-block" alt="...">
           <div class="carousel-caption ">
             <h5>Первое заседание Молодежного парламента</h5>
             <div class="d-none d-md-block">
@@ -62,7 +62,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="./img/na-sajt.jpg" class="d-block w-100" alt="...">
+          <img src="./img/na-sajt.jpg" class="d-block" alt="...">
           <div class="carousel-caption">
             <h5>с Днем защитника Отечества</h5>
            <div class="d-none d-md-block">
@@ -71,7 +71,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="./img/vDRvpI-K5m4.jpg" class="d-block w-100" alt="...">
+          <img src="./img/vDRvpI-K5m4.jpg" class="d-block" alt="...">
           <div class="carousel-caption">
             <h5>«Молодёжь Севера» 2022</h5>
             <div class="d-none d-md-block">
