Карточки новостей уменьшил

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card">
-            <img src="./img/1jJB3IHgDN8.jpg" class="card-img-top h-100" alt="...">
+            <img src="./img/1jJB3IHgDN8.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">СЕГОДНЯ ТВОЙ ДЕНЬ</h5>
               <p class="card-text">Сегодня команда Молодежного парламента поздравляет с Днем Рождения Евгения Петрова, члена Молодежного парламента VII созыва! 🎂 </p>
@@ -109,7 +109,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="./img/YKdnZwgOyQk.jpg" class="card-img-top h-100" alt="...">
+            <img src="./img/YKdnZwgOyQk.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">СЕГОДНЯ ТВОЙ ДЕНЬ </h5>
               <p class="card-text">Сегодня команда Молодежного парламента поздравляет с Днем Рождения Екатерину Игнатьеву, члена Молодежного парламента VII созыва! 🎂</p>
@@ -121,7 +121,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="./img/FtNxBupVgfM.jpg" class="card-img-top h-100" alt="...">
+            <img src="./img/FtNxBupVgfM.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">СЕГОДНЯ ТВОЙ ДЕНЬ</h5>
               <p class="card-text">Сегодня команда Молодежного парламента поздравляет с Днем Рождения Никиту Лазарева, члена Молодежного парламента VII созыва! 🎂</p>
