--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark Mycolor">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Молодёжный парламент</a>
+      <a class="navbar-brand" href="/index.html">Молодёжный парламент</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link " href="#">О нас</a>
+            <a class="nav-link " href="/About.html">О нас</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Состав</a>
