--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link " href="/About.html">О нас</a>
+            <a class="nav-link " href="About.html">О нас</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Состав</a>
