--- a/About.html
+++ b/About.html
@@ -63,28 +63,28 @@
     <p class="My">  — поддержка разработки и реализации наиболее перспективных общественно значимых проектов, инициатив и программ социально-экономического развития Красноярского края;</p>
     <p class="My"> — содействие в осуществлении информационно-аналитической, консультативной и иной деятельности, направленной на реализацию молодежной политики в крае.</p>
     <br>
-  </div>
-  <div class="Mycolor">
-    <div class="container">
+    <h1 class="text-center" >Структура</h1>
+    <hr>
+    <p class="">Молодёжный Парламент Красноярского края состоит из 52 человек,  которые образуют 10 комитетов, аппарат и 3 службы. Руководство организацией осуществляют Председатель Молодёжного Парламента, его заместители, руководитель аппарата и руководители служб и профильных комитетов.</p>
+    <h1 class="text-center " >Деятельность</h1>
+    <hr class="">
+    <p class="">Основные формы деятельности Молодёжного Парламента – реализация проектов регионального масштаба, посещение заседаний профильных комитетов, представление законопроектов. Среди наиболее известных проектов можно выделить следующие:</p>
+    <p class="My "> Дискуссионная площадка «Город говорит» </p>
+    <p class="My "> Всероссийский тест по истории Отечества </p>
+    <p class="My "> Молодёжный саммит </p>
+    <p class="My "> Молодежный экономический саммит </p>
+    <p class="My "> Молодёжная приёмная </p>
+    <p class="My "> Сибирская лига дебатов </p>
+    <p class="My "> Школа молодого парламентария </p>
+   <br>
+   <h1 class="text-center" >Контакты</h1>
+    <hr>
+    <p>660093, г. Красноярск, Остров Отдыха, д. 6, оф. 3-08, mpkrk24@gmail.com</p>
+    <p>Официальное сообщество: vk.com/mpkrk24</p>
+    <p>Instagram: @molparlament24</p>
+
+    
     <br>
-    <h1 class="text-center HMycolor" >Структура</h1>
-    <hr class="H1Mycolor">
-    <p class="H1Mycolor">Молодёжный Парламент Красноярского края состоит из 52 человек,  которые образуют 10 комитетов, аппарат и 3 службы. Руководство организацией осуществляют Председатель Молодёжного Парламента, его заместители, руководитель аппарата и руководители служб и профильных комитетов.</p>
-    <h1 class="text-center HMycolor" >Деятельность</h1>
-    <hr class="H1Mycolor">
-    <p class="H1Mycolor">Молодёжный Парламент Красноярского края состоит из 52 человек,  которые образуют 10 комитетов, аппарат и 3 службы. Руководство организацией осуществляют Председатель Молодёжного Парламента, его заместители, руководитель аппарата и руководители служб и профильных комитетов.</p>
-    <p> Молодежный Парламент при Законодательном Собрании Красноярского края образован 30 октября 2008 года постановлением Законодательного Собрания Красноярского края № 7 – 2332П. На данный момент действует состав VI созыва Молодёжного Парламента. </p>
-    <p>  Основными задачами Молодежного парламента являются:</p>
-    <p class="My">  — разработка и внесение предложений, затрагивающих интересы молодежи и других категорий населения края, в органы государственной власти Красноярского края и органы местного самоуправления Красноярского края в порядке, предусмотренном законодательством Российской Федерации и законодательством Красноярского края; </p>
-    <p class="My">  — участие в подготовке нормативных правовых актов органов государственной власти края;</p>
-    <p class="My">  — взаимодействие и сотрудничество с государственными органами, политическими партиями, иными общественными объединениями, государственными и иными организациями;</p>
-    <p class="My">  — информирование депутатов Законодательного Собрания края, членов Правительства края, органов местного самоуправления и общественности о положении молодежи в крае, наиболее актуальных проблемах молодежи, деятельности молодежных организаций, деятельности Молодежного парламента;</p>
-    <p class="My">  — содействие повышению социальной активности молодежи, молодежных общественных объединений, обеспечение участия молодежи в социально-политической жизни Красноярского края;</p>
-    <p class="My">  — содействие формированию правовой культуры и правового сознания молодежи, содействие в реализации и защите гражданских, политических, экономических, социальных, культурных прав и свобод молодежи Красноярского края;</p>
-    <p class="My">  — поддержка разработки и реализации наиболее перспективных общественно значимых проектов, инициатив и программ социально-экономического развития Красноярского края;</p>
-    <p class="My"> — содействие в осуществлении информационно-аналитической, консультативной и иной деятельности, направленной на реализацию молодежной политики в крае.</p>
-    <br>
-  </div>
   </div>
 </main>  
 <footer>
