--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a class="nav-link " href="./About.html">О нас</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Состав</a>
+            <a class="nav-link" href="./Team.html">Состав</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Проекты</a>
