--- a/Team.html
+++ b/Team.html
@@ -23,10 +23,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" href="./About.html">О нас</a>
+            <a class="nav-link" href="./About.html">О нас</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./Team.html">Состав</a>
+            <a class="nav-link active" href="./Team.html">Состав</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Проекты</a>
