--- a/Team.html
+++ b/Team.html
@@ -51,7 +51,12 @@
     <br>
     <h1 class="text-center" >Действующий состав</h1>
     <hr>
-    
+    <div class="MY_card">
+        <a href="https://vk.com/feed"><img src="./img/pic_accabe9be537babdee5a622f837d9d35.jpg" class="MY_card" alt="..."></a>
+        <div class="MY_text">
+          Мария Романова
+        </div>
+      </div>
     <br>
   </div>
 </main>  
