--- a/Team.html
+++ b/Team.html
@@ -54,7 +54,7 @@
     <div class="MY_card">
         <a href="https://vk.com/feed"><img src="./img/pic_accabe9be537babdee5a622f837d9d35.jpg" class="MY_card" alt="..."></a>
         <div class="MY_text">
-          Мария Романова
+          Мария Николаевна Романова
         </div>
       </div>
     <br>
