--- a/Team.html
+++ b/Team.html
@@ -52,7 +52,7 @@
     <h1 class="text-center" >Действующий состав</h1>
     <hr>
     <div class="MY_card">
-        <a href="https://vk.com/feed"><img src="./img/pic_accabe9be537babdee5a622f837d9d35.jpg" class="MY_card" alt="..."></a>
+        <a href="https://vk.com/feed"><img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="..."></a>
         <div class="MY_text">
           <p>Мария Николаевна Романова</p>
         </div>
