--- a/Team.html
+++ b/Team.html
@@ -55,6 +55,9 @@
         <a href="https://vk.com/feed"><img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="..."></a>
         <div class="MY_text">
           <p>Мария Николаевна Романова</p>
+          <br>
+          <br>
+          <p>Председатель молодёжного парламента</p>
         </div>
       </div>
     <br>
