--- a/Team.html
+++ b/Team.html
@@ -51,15 +51,243 @@
     <br>
     <h1 class="text-center" >Действующий состав</h1>
     <hr>
-    <div class="MY_card">
-        <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
-        <div class="MY_text">
-          <p>Мария Николаевна Романова</p>
-          <br>
-          <br>
-          <p>Председатель молодёжного парламента</p>
-        </div>
+    <div class="row g-4 justify-content-center align-items-center">
+      <div class="col col-auto mb-3">
+          <div class="MY_card">
+              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <div class="MY_text">
+                <p>Мария Николаевна Романова</p>
+                <br>
+                <br>
+                <p>Председатель молодёжного парламента</p>
+              </div>
+          </div>
       </div>
+      <div class="col col-auto mb-3">
+          <div class="MY_card">
+              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <div class="MY_text">
+                <p>Мария Николаевна Романова</p>
+                <br>
+                <br>
+                <p>Председатель молодёжного парламента</p>
+              </div>
+          </div>
+      </div>
+      <div class="col col-auto mb-3">
+          <div class="MY_card">
+              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <div class="MY_text">
+                <p>Мария Николаевна Романова</p>
+                <br>
+                <br>
+                <p>Председатель молодёжного парламента</p>
+              </div>
+          </div>
+      </div>
+      <div class="col col-auto mb-3">
+          <div class="MY_card">
+              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <div class="MY_text">
+                <p>Мария Николаевна Романова</p>
+                <br>
+                <br>
+                <p>Председатель молодёжного парламента</p>
+              </div>
+          </div>
+      </div>
+      <div class="col col-auto mb-3">
+          <div class="MY_card">
+              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <div class="MY_text">
+                <p>Мария Николаевна Романова</p>
+                <br>
+                <br>
+                <p>Председатель молодёжного парламента</p>
+              </div>
+          </div>
+      </div>
+    </div>
+    <br>
+    <h2 class="text-center" >ПРЕСС-ЦЕНТР</h2>
+    <br>
+    <div class="row g-4 justify-content-center align-items-center">
+      <div class="col col-auto mb-3">
+          <div class="MY_card">
+              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <div class="MY_text">
+                <p>Мария Николаевна Романова</p>
+                <br>
+                <br>
+                <p>Председатель молодёжного парламента</p>
+              </div>
+          </div>
+      </div>
+      <div class="col col-auto mb-3">
+          <div class="MY_card">
+              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <div class="MY_text">
+                <p>Мария Николаевна Романова</p>
+                <br>
+                <br>
+                <p>Председатель молодёжного парламента</p>
+              </div>
+          </div>
+      </div>
+      <div class="col col-auto mb-3">
+          <div class="MY_card">
+              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <div class="MY_text">
+                <p>Мария Николаевна Романова</p>
+                <br>
+                <br>
+                <p>Председатель молодёжного парламента</p>
+              </div>
+          </div>
+      </div>
+      <div class="col col-auto mb-3">
+          <div class="MY_card">
+              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <div class="MY_text">
+                <p>Мария Николаевна Романова</p>
+                <br>
+                <br>
+                <p>Председатель молодёжного парламента</p>
+              </div>
+          </div>
+      </div>
+      <div class="col col-auto mb-3">
+          <div class="MY_card">
+              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <div class="MY_text">
+                <p>Мария Николаевна Романова</p>
+                <br>
+                <br>
+                <p>Председатель молодёжного парламента</p>
+              </div>
+          </div>
+      </div>
+    </div>
+    <br>
+    <h2 class="text-center" >ЮРИДИЧЕСКАЯ СЛУЖБА</h2>
+    <br>
+    <div class="row g-4 justify-content-center align-items-center">
+      <div class="col col-auto mb-3">
+          <div class="MY_card">
+              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <div class="MY_text">
+                <p>Мария Николаевна Романова</p>
+                <br>
+                <br>
+                <p>Председатель молодёжного парламента</p>
+              </div>
+          </div>
+      </div>
+      <div class="col col-auto mb-3">
+          <div class="MY_card">
+              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <div class="MY_text">
+                <p>Мария Николаевна Романова</p>
+                <br>
+                <br>
+                <p>Председатель молодёжного парламента</p>
+              </div>
+          </div>
+      </div>
+      <div class="col col-auto mb-3">
+          <div class="MY_card">
+              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <div class="MY_text">
+                <p>Мария Николаевна Романова</p>
+                <br>
+                <br>
+                <p>Председатель молодёжного парламента</p>
+              </div>
+          </div>
+      </div>
+      <div class="col col-auto mb-3">
+          <div class="MY_card">
+              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <div class="MY_text">
+                <p>Мария Николаевна Романова</p>
+                <br>
+                <br>
+                <p>Председатель молодёжного парламента</p>
+              </div>
+          </div>
+      </div>
+      <div class="col col-auto mb-3">
+          <div class="MY_card">
+              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <div class="MY_text">
+                <p>Мария Николаевна Романова</p>
+                <br>
+                <br>
+                <p>Председатель молодёжного парламента</p>
+              </div>
+          </div>
+      </div>
+    </div>
+    <br>
+    <h2 class="text-center" >КОМИТЕТ ПО ГОСУДАРСТВЕННОМУ УСТРОЙСТВУ, ЗАКОНОДАТЕЛЬСТВУ И МЕСТНОМУ САМОУПРАВЛЕНИЮ</h2>
+    <br>
+    <div class="row g-4 justify-content-center align-items-center">
+      <div class="col col-auto mb-3">
+          <div class="MY_card">
+              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <div class="MY_text">
+                <p>Мария Николаевна Романова</p>
+                <br>
+                <br>
+                <p>Председатель молодёжного парламента</p>
+              </div>
+          </div>
+      </div>
+      <div class="col col-auto mb-3">
+          <div class="MY_card">
+              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <div class="MY_text">
+                <p>Мария Николаевна Романова</p>
+                <br>
+                <br>
+                <p>Председатель молодёжного парламента</p>
+              </div>
+          </div>
+      </div>
+      <div class="col col-auto mb-3">
+          <div class="MY_card">
+              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <div class="MY_text">
+                <p>Мария Николаевна Романова</p>
+                <br>
+                <br>
+                <p>Председатель молодёжного парламента</p>
+              </div>
+          </div>
+      </div>
+      <div class="col col-auto mb-3">
+          <div class="MY_card">
+              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <div class="MY_text">
+                <p>Мария Николаевна Романова</p>
+                <br>
+                <br>
+                <p>Председатель молодёжного парламента</p>
+              </div>
+          </div>
+      </div>
+      <div class="col col-auto mb-3">
+          <div class="MY_card">
+              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <div class="MY_text">
+                <p>Мария Николаевна Романова</p>
+                <br>
+                <br>
+                <p>Председатель молодёжного парламента</p>
+              </div>
+          </div>
+      </div>
+    </div>
     <br>
   </div>
 </main>  
