--- a/Team.html
+++ b/Team.html
@@ -109,66 +109,6 @@
       </div>
     </div>
     <br>
-    <h2 class="text-center" >ПРЕСС-ЦЕНТР</h2>
-    <br>
-    <div class="row g-4 justify-content-center align-items-center">
-      <div class="col col-auto mb-3">
-          <div class="MY_card">
-              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
-              <div class="MY_text">
-                <p>Мария Николаевна Романова</p>
-                <br>
-                <br>
-                <p>Председатель молодёжного парламента</p>
-              </div>
-          </div>
-      </div>
-      <div class="col col-auto mb-3">
-          <div class="MY_card">
-              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
-              <div class="MY_text">
-                <p>Мария Николаевна Романова</p>
-                <br>
-                <br>
-                <p>Председатель молодёжного парламента</p>
-              </div>
-          </div>
-      </div>
-      <div class="col col-auto mb-3">
-          <div class="MY_card">
-              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
-              <div class="MY_text">
-                <p>Мария Николаевна Романова</p>
-                <br>
-                <br>
-                <p>Председатель молодёжного парламента</p>
-              </div>
-          </div>
-      </div>
-      <div class="col col-auto mb-3">
-          <div class="MY_card">
-              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
-              <div class="MY_text">
-                <p>Мария Николаевна Романова</p>
-                <br>
-                <br>
-                <p>Председатель молодёжного парламента</p>
-              </div>
-          </div>
-      </div>
-      <div class="col col-auto mb-3">
-          <div class="MY_card">
-              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
-              <div class="MY_text">
-                <p>Мария Николаевна Романова</p>
-                <br>
-                <br>
-                <p>Председатель молодёжного парламента</p>
-              </div>
-          </div>
-      </div>
-    </div>
-    <br>
     <h2 class="text-center" >ЮРИДИЧЕСКАЯ СЛУЖБА</h2>
     <br>
     <div class="row g-4 justify-content-center align-items-center">
@@ -185,12 +125,12 @@
       </div>
       <div class="col col-auto mb-3">
           <div class="MY_card">
-              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <img src="./img/216A0506.jpg" class="MY_card" alt="...">
               <div class="MY_text">
-                <p>Мария Николаевна Романова</p>
+                <p>Алексей Дмитриевич Широков</p>
                 <br>
                 <br>
-                <p>Председатель молодёжного парламента</p>
+                <p>Заместитель Председателя Юридической службы</p>
               </div>
           </div>
       </div>
@@ -244,16 +184,16 @@
           </div>
       </div>
       <div class="col col-auto mb-3">
-          <div class="MY_card">
-              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
-              <div class="MY_text">
-                <p>Мария Николаевна Романова</p>
-                <br>
-                <br>
-                <p>Председатель молодёжного парламента</p>
-              </div>
-          </div>
-      </div>
+        <div class="MY_card">
+            <img src="./img/216A0506.jpg" class="MY_card" alt="...">
+            <div class="MY_text">
+              <p>Алексей Дмитриевич Широков</p>
+              <br>
+              <br>
+              <p>Заместитель Председателя Комитета</p>
+            </div>
+        </div>
+    </div>
       <div class="col col-auto mb-3">
           <div class="MY_card">
               <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
