--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
 <div class="row row-cols-1 row-cols-md-1 g-4">
   <div class="col">
     <div class="MYcard">
-      <a href="./Team.html"><img src="./img/cristiano_gol_sevilla_n-1.jpg" class="card-img-top h-100" alt="..."></a>
+      <a href="./Team.html"><img src="./img/cristiano_gol_sevilla_n-1.jpg" class="card-img-top h-100" alt="...">
       <div class="MYtext">
         <h3>Состав</h3>
           Действующий состав молодёжного парламента Красноярского края при Законодательном Собрании Красноярского края VII созыва
-      </div>
+      </div></a>
     </div>
   </div>
   <div class="col">
