--- a/Team.html
+++ b/Team.html
@@ -54,7 +54,7 @@
     <div class="row g-4 justify-content-center align-items-center">
       <div class="col col-auto mb-3">
           <div class="MY_card">
-              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <a href="./Person.html"><a href="./Person.html"><img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="..."> </a> </a>
               <div class="MY_text">
                 <p>Мария Николаевна Романова</p>
                 <br>
@@ -65,7 +65,7 @@
       </div>
       <div class="col col-auto mb-3">
           <div class="MY_card">
-              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <a href="./Person.html"><a href="./Person.html"><img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="..."> </a> </a>
               <div class="MY_text">
                 <p>Мария Николаевна Романова</p>
                 <br>
@@ -76,7 +76,7 @@
       </div>
       <div class="col col-auto mb-3">
           <div class="MY_card">
-              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <a href="./Person.html"><a href="./Person.html"><img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="..."> </a> </a>
               <div class="MY_text">
                 <p>Мария Николаевна Романова</p>
                 <br>
@@ -87,7 +87,7 @@
       </div>
       <div class="col col-auto mb-3">
           <div class="MY_card">
-              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <a href="./Person.html"><a href="./Person.html"><img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="..."> </a> </a>
               <div class="MY_text">
                 <p>Мария Николаевна Романова</p>
                 <br>
@@ -98,7 +98,7 @@
       </div>
       <div class="col col-auto mb-3">
           <div class="MY_card">
-              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <a href="./Person.html"><a href="./Person.html"><img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="..."> </a> </a>
               <div class="MY_text">
                 <p>Мария Николаевна Романова</p>
                 <br>
@@ -114,7 +114,7 @@
     <div class="row g-4 justify-content-center align-items-center">
       <div class="col col-auto mb-3">
           <div class="MY_card">
-              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <a href="./Person.html"><a href="./Person.html"><img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="..."> </a> </a>
               <div class="MY_text">
                 <p>Мария Николаевна Романова</p>
                 <br>
@@ -136,7 +136,7 @@
       </div>
       <div class="col col-auto mb-3">
           <div class="MY_card">
-              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <a href="./Person.html"><img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="..."> </a>
               <div class="MY_text">
                 <p>Мария Николаевна Романова</p>
                 <br>
@@ -147,7 +147,7 @@
       </div>
       <div class="col col-auto mb-3">
           <div class="MY_card">
-              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <a href="./Person.html"><img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="..."> </a>
               <div class="MY_text">
                 <p>Мария Николаевна Романова</p>
                 <br>
@@ -158,7 +158,7 @@
       </div>
       <div class="col col-auto mb-3">
           <div class="MY_card">
-              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <a href="./Person.html"><img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="..."> </a>
               <div class="MY_text">
                 <p>Мария Николаевна Романова</p>
                 <br>
@@ -174,7 +174,7 @@
     <div class="row g-4 justify-content-center align-items-center">
       <div class="col col-auto mb-3">
           <div class="MY_card">
-              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <a href="./Person.html"><img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="..."> </a>
               <div class="MY_text">
                 <p>Мария Николаевна Романова</p>
                 <br>
@@ -196,7 +196,7 @@
     </div>
       <div class="col col-auto mb-3">
           <div class="MY_card">
-              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <a href="./Person.html"><img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="..."> </a>
               <div class="MY_text">
                 <p>Мария Николаевна Романова</p>
                 <br>
@@ -207,7 +207,7 @@
       </div>
       <div class="col col-auto mb-3">
           <div class="MY_card">
-              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <a href="./Person.html"><img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="..."> </a>
               <div class="MY_text">
                 <p>Мария Николаевна Романова</p>
                 <br>
@@ -218,7 +218,7 @@
       </div>
       <div class="col col-auto mb-3">
           <div class="MY_card">
-              <img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="...">
+              <a href="./Person.html"><img src="./img/H8l2UfRkVCw.jpg" class="MY_card" alt="..."> </a>
               <div class="MY_text">
                 <p>Мария Николаевна Романова</p>
                 <br>
