--- a/Person.html
+++ b/Person.html
@@ -49,16 +49,13 @@
 <main>
   <div class="container">
     <br>
-    <h1 class="text-center" >Действующий состав</h1>
-    <hr>
+    <h1 class="text-center" >Мария Николаевна Романова</h1>
+    <h3 class="text-center">Председатель Молодёжного парламента</h3>
     <div class="row">
         <div class="col">
             <img src="./img/H8l2UfRkVCw.jpg" class="person" alt="...">
         </div>
         <div class="col person text-center">
-            <H1>Мария Николаевна Романова</H1>
-            <h3>Председатель Молодёжного парламента</h3>
-            <hr>
             <div class="row g-4 justify-content-center align-items-center">
               <div class="col">
                 <a href="https://vk.com/marie_13"><img src="./icon/vk.svg"  class="icon" alt=""></a>
