--- a/Person.html
+++ b/Person.html
@@ -56,18 +56,19 @@
             <img src="./img/H8l2UfRkVCw.jpg" class="person" alt="...">
         </div>
         <div class="col person text-center">
+          <br>
             <div class="row g-4 justify-content-center align-items-center">
               <div class="col">
-                <a href="https://vk.com/marie_13"><img src="./icon/vk.svg"  class="icon" alt=""></a>
+                <a href="https://vk.com/marie_13"><img src="./icon/VK_black.svg"  class="icon" alt=""></a>
               </div>
               <div class="col">
-                <a href="https://t.me/mromanovaa"><img src="./icon/telegram.svg" class="icon" alt=""></a>
+                <a href="https://t.me/mromanovaa"><img src="./icon/Telegram_black.svg" class="icon" alt=""></a>
               </div>
               <div class="col">
-                <a href="https://www.tiktok.com/@romanova_marie"><img src="./icon/tiktok.svg" class="icon" alt=""></a>
+                <a href="https://www.tiktok.com/@romanova_marie"><img src="./icon/TikTok_black.svg" class="icon" alt=""></a>
               </div>
               <div class="col">
-                <a href="mailto:mpkrk24@gmail.com"><img src="./icon/mail.svg" class="icon" alt=""></a>
+                <a href="mailto:mpkrk24@gmail.com"><img src="./icon/Mail.ru_black.svg" class="icon" alt=""></a>
               </div>
             </div>
             <hr>
