--- a/Projects.html
+++ b/Projects.html
@@ -26,10 +26,10 @@
             <a class="nav-link" href="./About.html">О нас</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="./Team.html">Состав</a>
+            <a class="nav-link" href="./Team.html">Состав</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./Projects.html">Проекты</a>
+            <a class="nav-link active" href="./Projects.html">Проекты</a>
           </li>
           <li class="nav-item">
             <a class="nav-link"  href="#">Инициативы</a>
@@ -49,36 +49,29 @@
 <main>
   <div class="container">
     <br>
-    <h1 class="text-center" >Мария Николаевна Романова</h1>
+    <h1 class="text-center" >Проекты</h1>
     <hr>
-    <h3 class="text-center">Председатель Молодёжного парламента</h3>
-    <div class="row">
-        <div class="col">
-            <img src="./img/H8l2UfRkVCw.jpg" class="person" alt="...">
+    <div class="row g-4 justify-content-center align-items-center">
+        <div class="col mb-3 text-center projects">
+            <img class="project" src="./img/AvrPnbPHEdw.jpg" alt="">
+           <p>PRO-парламентаризм </p>
         </div>
-        <div class="col person text-center">
-          <br>
-            <div class="row g-4 justify-content-center align-items-center">
-              <div class="col">
-                <a href="https://vk.com/marie_13"><img src="./icon/VK_black.svg"  class="icon" alt=""></a>
-              </div>
-              <div class="col">
-                <a href="https://t.me/mromanovaa"><img src="./icon/Telegram_black.svg" class="icon" alt=""></a>
-              </div>
-              <div class="col">
-                <a href="https://www.tiktok.com/@romanova_marie"><img src="./icon/TikTok_black.svg" class="icon" alt=""></a>
-              </div>
-              <div class="col">
-                <a href="mailto:mpkrk24@gmail.com"><img src="./icon/Mail.ru_black.svg" class="icon" alt=""></a>
-              </div>
-            </div>
-            <hr>
-            <h3>О себе</h3>
-            <h3>Образование</h3>
-            <h3>Трудовая деятельность</h3>
-            <h3>Общественная деятельность</h3>
+        <div class="col mb-3 text-center projects">
+            <img class="project" src="./img/bol_ist.jpeg" alt="">
+            <p>Большая история </p>
         </div>
-    </div>
+        <div class="col mb-3 text-center projects">
+            <img class="project" src="./img/1Som1Bkzj7s.jpg" alt="">
+            <p>Молодёжные советы Красноярского края </p>
+        </div>
+        <div class="col mb-3 text-center projects">
+            <img class="project" src="./img/Pl4JJYLsmV8.jpg" alt="">
+            <p>Сибиркое слово </p>
+        </div>
+        <div class="col mb-3 text-center projects">
+            <img class="project" src="./img/EygDh6y2-z8.jpg" alt="">
+            <p>Арктического форума "Молодёжь Севера"</p>
+        </div>
   </div>
   <br>
 </main>  
