--- a/About.html
+++ b/About.html
@@ -29,7 +29,7 @@
             <a class="nav-link" href="./Team.html">Состав</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Проекты</a>
+            <a class="nav-link" href="./Projects.html">Проекты</a>
           </li>
           <li class="nav-item">
             <a class="nav-link"  href="#">Инициативы</a>
