--- a/Сontacts.html
+++ b/Сontacts.html
@@ -77,7 +77,7 @@
                 <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Acd8608d22215e70ed4ed5492e51f3686c9d9e1b2f97601f90b4362b06f59796c&amp;width=100%&amp;height=100%&amp;lang=ru_RU&amp;scroll=true"></script>
               </div>
             </div>
-            <div class="col form">
+            <div class="col">
         <form>
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Фамилия Имя Отчество</label>
